kubernetes/minikube/react_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: react
  name: react-nodeport
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    run: react
  type: NodePort
status:
  loadBalancer: {}
