kubernetes/minikube/react_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-note-react
  annotations:
    # 参考 https://stackoverflow.com/questions/59700134/serving-a-static-react-application-behind-a-kubernetes-ingress#
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: react-nodeport
              servicePort: 3000
